fix: harden MCP contracts and lifecycle